--- a/municipal/index.html
+++ b/municipal/index.html
@@ -664,8 +664,8 @@
 
             },
             de: { // German translations
-                app_title: "Kommunaler Lärm-Normulator",
-                sidebar_title: "Kommunal-UI",
+                app_title: "Gemeinde Lärm-Normulator",
+                sidebar_title: "Gemeinde-UI",
                 nav_dashboard: "Dashboard",
                 nav_map: "Konflikt- & Harmoniekarte",
                 nav_complaints: "Beschwerdeprotokoll",
